fix(ui): Fix Add moods layout bugs

--- a/src/views/VotingResult/VotingResult.css
+++ b/src/views/VotingResult/VotingResult.css
@@ -73,7 +73,7 @@ div.hide {
     }
 
     & .row {
-      align-items: flex-end;
+      align-items: baseline;
       margin-bottom: 1rem;
       margin-top: 1rem;
 
